<resources>
    <string name="app_name">AP2-EX3</string>
    <string name="contact">Contact</string>
    <string name="login_here">Login Here</string>
    <string name="sign_up_headline">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="display_name">Display Name</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="has_account">Already have an account?</string>
    <string name="new_account">Don\'t have an account?</string>
    <string name="login_btn">Login</string>
    <string name="sign_up">Sign Up Here</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="add">Add</string>
    <string name="add_contact">Add Contact</string>
    <string name="message">Message</string>
    <string name="send_button">Send Button</string>
    <string name="more_button">Options Button</string>
    <string name="back_button">back button</string>
    <string name="contact_image">contact image</string>
    <string name="messages_scroll">messages scroll</string>
    <string name="settings">Settings</string>
    <string name="night_mode">Night Mode</string>
    <string name="BaseUrl">http://10.0.2.2:5000/api/</string>
    <string name="add_chat">add chat</string>
    <string name="contact_picture">contact picture</string>
    <string name="logout">logout</string>
    <string name="night_mode_on">Night Mode: On</string>
    <string name="night_mode_off">Night Mode: Off</string>
    <string name="preference_file_key">Settings</string>
    <string name="preference_file_key">Utilities</string>
</resources>