<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:paddingTop="120dp"
    android:paddingBottom="120dp"
    android:gravity="center_horizontal"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="30dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="18dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LoginHead"
                android:text="@string/welcome_back"
                android:paddingBottom="30dp"
                android:paddingTop="30dp"
                android:textColor="@color/black"
                android:textSize="35sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="8dp"
                android:layout_marginTop="25dp"
                android:hint="@string/username"
                android:padding="8dp"
                android:textColor="@color/black"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:layout_marginTop="15dp"
                android:hint="@string/password"
                android:padding="8dp"
                android:textColor="@color/black"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:text="@string/login"
                android:textSize="18sp"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:text="@string/new_account"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:layout_marginTop="19dp" />

                <TextView
                    android:id="@+id/signupLink"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:text="@string/sign_up"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:layout_marginTop="19dp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>