<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/SCREEN"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header"
        style="@style/USER_BACKGROUND"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="3dp"
        android:paddingTop="15dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        tools:ignore="RtlSymmetry">

        <ImageButton
            android:id="@+id/backButton"
            style="@style/ARROW_BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/back_button"
            android:padding="8dp" />

        <LinearLayout
            android:id="@+id/contactInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="3dp"
            android:layout_toEndOf="@id/backButton"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/contactImage"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:scaleType="centerCrop"
                style="@style/ShapeAppearanceOverlay.App.RoundImageView"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.RoundImageView" />

            <TextView
                android:id="@+id/contactName"
                style="@style/TEXT"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="Contact Name"
                android:textSize="18sp"
                android:layout_marginStart="18dp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayoutMsg"
        style="@style/CONTACT_BACKGROUND"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/header">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lstMessages"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:id="@+id/footer"
        style="@style/USER_BACKGROUND"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="18dp">

        <EditText
            android:id="@+id/messageInput"
            style="@style/TEXT"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:layout_toStartOf="@id/sendButton"
            android:autofillHints="message"
            android:background="@drawable/custom_edittext"
            android:hint="@string/message"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/sendButton"
            style="@style/SEND_BTN"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/send_button"
            android:padding="11dp" />

    </RelativeLayout>

</RelativeLayout>
